cabal-version:       2.0

name:                streaming-Yaml
version:             0.1.0.0
synopsis:            streaming-based streaming api for the Yaml library
description:
  This package provides streaming support for the Yaml library using the
  <http://hackage.haskell.org/package/streaming streaming> library

homepage:            https://github.com/emilypi/Yaml
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Emily Pillmore
maintainer:          emilypi@cohomolo.gy
copyright:           (c) 2020 Emily Pillmore
category:            Yaml
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:        GHC ==8.8.2 || ==8.8.1 || ==8.6.5 || ==8.6.3 || ==8.4.4 || ==8.4.3 || ==8.2.2 || ==8.0.2

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite streaming-Yaml-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.12.0.0
